AH-2002-05-29-1: Bugfix:    Fix bug allowing non-privileged users to submit jobs
                            with priority higher than 0
                 Issue:     #271
                 Bugtraq:   #4692957

CR-2002-05-29-2: Bugfix:    - uninitialized function pointer compiler warning

JG-2002-05-29-2: Enhancem.  Allow specification of arguments to 
                            [rsh|rlogin|qlogin]_[daemon|command]
                 Issue:     #232           

CR-2002-05-29-1: Testsuite: - docu of HTML procedures

CR-2002-05-29-0: Testsuite: - added prototype functions for HTML generation
                 Enhancem.: - new parameter for testsuite: html_dir
                            - compile_source() procedure will generate HTML
                              output in html_dir directory

JG-2002-05-29-1: Cleanup:   make dstring functions return a const char * 
                            instead of char *
                 Issue:     #265

JG-2002-05-29-0: Cleanup:   use of library functions, typos,
                            improved job_get_id_string()
                 Issue:     #258           

CR-2002-05-28-0: Testsuite: test new qrsh options -h and -hold_jid
                 Issue:     #66

JG-2002-05-28-0: Cleanup:   common function calls to create the active job 
                            directories in execd. 
                            Replace static buffers for building paths by 
                            dynamic strings (dstring).
                            Handle KEEP_ACTIVE with restarted jobs.
                 Issues:    #254, #261           

AH-2002-05-28-1: Bugfix:    Fix messages printed when GDI client fails contacting 
                            qmaster

JG-2002-05-27-0: Bugfix:    qsh ignored -S <shell> in sge_request(5) files
                 Issue:     #250
                 Bugtraq:   #4682966

AA-2002-05-27-0: I18N.:     I18N/L10N changes

CR-2002-05-24-1: Enhancem.: merged L10N Changes for install scripts from