@@ -1,3 +1,6 @@
+JG-2002-05-31-0: Enhancem.  rshd: new switch -i: ignore /etc/nologin
+                 Issue:     #272
+
 AH-2002-05-29-1: Bugfix:    Fix bug allowing non-privileged users to submit jobs
                             with priority higher than 0
                  Issue:     #271
